Prevent text wrapping in the quote tooltip

--- a/wcfsetup/install/files/style/ui/tooltip.scss
+++ b/wcfsetup/install/files/style/ui/tooltip.scss
@@ -47,6 +47,7 @@
 	-ms-user-select: none;
 	user-select: none;
 
+	white-space: nowrap;
 	z-index: 350;
 
 	&.touchForceInaccessible {
